fixed styling on small devices

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -37,17 +37,11 @@ a:hover {
       font-size: 12px;
     }
     #container {
-        padding-top: 54px;
+        padding-top: 50px;
     }
-}
-
-@include media-breakpoint-up(sm) {
-  html {
-    font-size: 12px;
-  }
-  #container {
-      padding-top: 54px;
-  }
+    #logo-img {
+        width: 120px;
+    }
 }
 
 @include media-breakpoint-up(md) {
